<resources>
    <string name="app_name">EducationAPP</string>
    <string name="hiut">请输入手机号</string>
    <string name="hiut1">请输入验证码</string>
    <string name="hiut2">请输入新密码</string>
    <string name="hiut3">请输入真实的手机号方便联系老师</string>
    <string name="hiut4">请输入验证码</string>
    <string name="hint5">请设置登录密码</string>
    <string name="hint6">请确认密码</string>
    <string name="hint7">请输入账号</string>
    <string name="hint8">请输入密码</string>
    <string name="enter_1">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">立即注册</string>
    <string name="oter">使用其他方式登录</string>
    <string name="exec">提交</string>
    <string name="obtain">获取验证码</string>
    <string name="protocol">壹家教用户协议</string>
    <string name="execution">提交</string>
    <string name="tt">同意</string>


</resources>
