<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/land_log1">

    <LinearLayout
        android:id="@+id/ll_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/sdsfdsfgds">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/land_log1" />

        <EditText
            android:id="@+id/phone_numberaaa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/hiut3"
            android:textSize="13dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_verify_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_phone_number"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/sdsfdsfgds">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/land_log1" />

        <EditText
            android:id="@+id/verify_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/hiut4"
            android:textSize="13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ll_phone_number"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="7dp">

        <Button
            android:id="@+id/yanzheng"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:background="#0a6dd6"
            android:text="获取验证码"
            android:textColor="#ffffff"
            android:textSize="13dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_verify_number"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/sdsfdsfgds">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/land_log1" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/hint5"
            android:password="true"
            android:textSize="13dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_input_password"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/sdsfdsfgds">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/land_log1" />

        <EditText
            android:id="@+id/input_password2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/hint6"
            android:password="true"
            android:textSize="13dp" />
    </LinearLayout>

    <Button
        android:id="@+id/execution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_input_password2"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="18dp"
        android:background="#0a6dd6"
        android:text="提交"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/execution"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="123dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tt" />

        <Button
            android:id="@+id/protocol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="22dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/protocol"
            android:textColor="#7a2fefcc" />
    </LinearLayout>

</RelativeLayout>