<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/sdsfdsfgds"
        android:orientation="horizontal"
        android:padding="0dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/icon_account" />

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="2dp"
            android:background="@null"
            android:hint="@string/hint7"
            android:orientation="vertical"
            android:textSize="13dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/sdsfdsfgds"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/r_password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:hint="@string/hint8"
            android:orientation="vertical"
            android:password="true"
            android:textSize="13dp" />
    </LinearLayout>


    <Button
        android:id="@+id/enter_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="295dp"
        android:background="@drawable/background1"
        android:text="@string/enter_1"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_1"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="left|center"
        android:text="@string/forget_password" />

    <Button
        android:id="@+id/register_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/enter_1"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="right|center"
        android:text="@string/register_account" />

    <TextView
        android:id="@+id/line_left"
        android:layout_width="70dp"
        android:layout_height="1dp"
        android:layout_below="@id/forget_password"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:background="#746c6c" />

    <TextView
        android:id="@+id/line_right"
        android:layout_width="70dp"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/forget_password"
        android:layout_marginRight="28dp"
        android:layout_marginTop="40dp"
        android:background="#746c6c" />

    <TextView
        android:id="@+id/text_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="33dp"
        android:text="@string/oter" />

    <LinearLayout
        android:id="@+id/ll_wei_xin_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_other"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="190dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sdsfdsfgds"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/weixin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="微信登录" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_qq_xin_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_other"
        android:layout_marginLeft="190dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sdsfdsfgds"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/qq" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="QQ登录" />
    </LinearLayout>
</RelativeLayout>